@@ -1,4 +1,6 @@
 ﻿2.70 Nightly (2013-03-XX)
+	[rmcardle] Fix issue MR-379 - Connection variables not working with external tools
+	[rmcardle] Hide the username and domain settings for VNC connections.
 	[rmcardle] Fixed issue MR-352 - Passwords with " (quotation mark) and # (hash key) characters make mRemoteNG to open PuttyNG dialog
 
 2.70 pre-alfa (Forked as mRemoteNC)
